@@ -27,12 +27,14 @@ import java.util.logging.Logger;
 import java.util.logging.Level;
 import java.util.TimeZone;
 import java.text.SimpleDateFormat;
+import java.util.Arrays;
 
 public final class QuizTimingPropertiesUtils {
 
     private static final Logger log = Logger.getLogger(QuizTimingPropertiesUtils.class.getName());
 
-    List<String> quiz_questions = new ArrayList<String>(List.of(
+    List<String> quiz_questions = Arrays.asList("Which plant has the prettiest colors?", 
+        "Which plant has the most food growing from it?",
         "Which plant has the most food growing from it?",
         "Which plant has the prettiest colors?",
         "Which plant is likely to grow the fastest?",
@@ -50,9 +52,7 @@ public final class QuizTimingPropertiesUtils {
         "Which plant will most likely impress your friends and family?",
         "Which plant would look the best inside as a houseplant?",
         "Which plant would look the best outside in a garden?",
-        "Which plant would you give as a gift?"
-    ));
-
+        "Which plant would you give as a gift?");
     //This function gets the the "quiz_timestamp" property of the entity that is fed into the function
     public Long getQuizTimestampProperty(String entity, String id_of_entity, String id_of_entity_value, DatastoreService datastore) {
         Query query = new Query(entity);
